fixed another stupid alignment bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -301,8 +301,8 @@ background-size: cover;
 
 .indexItem:hover {
   cursor: pointer;
-  font-size: 20px;
-  text-shadow: 2px 2px 3px saddlebrown;
+  color: white;
+  text-shadow: 0px 0px 3px saddlebrown;
 }
 
 .indexContainer {
